--- a/index.html
+++ b/index.html
@@ -12,37 +12,17 @@ title: Home Page
 
 <body>
 
+{% include active_data.html %}
+
 {% include header.html %}
 
 <ol class="breadcrumb">
-  <li>Dashboard</li>
+  <li><a href="full_dashboard.html">Full Dashboard</a></li>
+  <li>Active Dashboard</li>
 </ol>
 
 
-<div class="page-header">
-  <h1>Dashboard for {{base_repository}}</h1>
-</div>
-
-<div class="alert alert-info">
-  <h4>Branches</h4>
-</div>
-
-{% assign table_type = "branch" %}
-{% include build_status_table.html %}
-
-<div class="alert alert-info">
-  <h4>Pull Requests</h4>
-</div>
-
-{% assign table_type = "pull_request" %}
-{% include build_status_table.html %}
-
-<div class="alert alert-info">
-  <h4>Releases</h4>
-</div>
-
-{% assign table_type = "release" %}
-{% include build_status_table.html %}
+{% include dashboard.html %}
 
 
 
