--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@ title: Home Page
 <!DOCTYPE HTML>
 
 <head>
+<title>{{ page.title }}</title>
+<meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 {% include common.html %}
-<title>{{page.title}}</title>
 </head>
 
 
